cmake_minimum_required(VERSION 3.7)
project(password_manager)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(/usr/local/include/mysql-connector-cpp/include)
set(SOURCE_FILES main)
add_executable(password_manager ${SOURCE_FILES})
target_link_libraries(password_manager mysqlcppconn)
